# hb-downloader

./: Cargo.toml
api/: Cargo.toml
api/src/: lib.rs  types.rs
downloader/: Cargo.toml
downloader/config/: default.toml
downloader/src/: config.rs  main.rs
