[package]
name = "hb_api"
version = "0.1.0"
authors = ["Simon Dickson <simonhdickson@users.noreply.github.com>"]
edition = "2018"

[dependencies]
async-std = "1.8"
sha-1 = "0.9"
reqwest = { version = "0.10", features = ["json"] }
md-5 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.5"
url = "2.2"
