[package]
name = "hb_api"
version = "0.1.0"
authors = ["Simon Dickson <simonhdickson@users.noreply.github.com>"]
edition = "2021"

[dependencies]
async-std = "1.8"
sha-1 = "0.10"
reqwest = { version = "0.11", features = ["json"] }
md-5 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.5"
url = "2.2"
