[package]
name = "hb_api"
version = "0.1.0"
authors = ["Simon Dickson <simonhdickson@users.noreply.github.com>"]
edition = "2021"

[dependencies]
async-std = "1.8"
futures-util = { version = "0.3" }
md-5 = "0.10"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.10"
thiserror = "1.0"
tokio = { version = "1.17", features = ["full"] }
toml = "0.5"
url = "2.2"
