[package]
name = "hb-downloader"
version = "0.1.0"
authors = ["Simon Dickson <simonhdickson@users.noreply.github.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
config = { version = "0.10", default-features = false, features = ["toml"] }
hb_api = { path = "../api" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
toml = "0.5"
