[package]
name = "hb-downloader"
version = "0.1.0"
authors = ["Simon Dickson <simonhdickson@users.noreply.github.com>"]
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
config = { version = "0.13", default-features = false, features = ["toml"] }
hb_api = { path = "../api" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.17", features = ["full"] }
toml = "0.5"
